# epic

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs  epic_project_assistant.bat  epic_project_assistant.command  epic_project_assistant.nu  epic_shell.bat  epic_shell.command  epic_shell.nu
.github/workflows/: ci.yml
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  AUDIT.md  CONFIGURATION.md  DESIGN.md  DE_UNSANDBOXED.md  DOCUMENT_STORE.md  FIX_LOOP_SPEC.md  FLICK_INTEGRATION.md  FLICK_LIBRARY_MIGRATION.md  ISSUES.md  LOT_SPEC.md  NUSHELL_MIGRATION.md  OPEN_QUESTIONS.md  ORCHESTRATOR_REFACTOR.md  OVERVIEW.md  REEL_EXTRACTION.md  SANDBOXING.md  SPEC_NU_UNIFIED_TOOLS.md  STATUS.md  TASK_MODEL.md  TUI_DESIGN.md  UPGRADE.md  VERIFICATION.md  WINDOWS_SANDBOX.md  ZEROCLAW_AUDIT_PLAN.md  ZEROCLAW_INTEGRATION.md
docs/audit/: B1.md  B2.md  B3.md  B4.md  B5.md  B6.md  B7.md  B8.md  SUMMARY.md  U1-R1.md  U1-R2.md  U1-R3.md  U1-R4.md  U1-R5.md  U1-R6.md  U1-R7.md  U10-R1.md  U10-R3.md  U10-R4.md  U10-R6.md  U11-R1.md  U11-R3.md  U11-R4.md  U11-R5.md  U11-R6.md  U12-R1.md  U12-R2.md  U12-R3.md  U12-R4.md  U12-R5.md  U12-R6.md  U13-R1.md  U13-R3.md  U13-R4.md  U13-R5.md  U13-R6.md  U14-R1.md  U14-R3.md  U14-R4.md  U14-R6.md  (+56 more)
prompts/: audit_kickoff.md  project_assistant.md
src/: cli.rs  events.rs  git.rs  init.rs  knowledge.rs  main.rs  metrics.rs  orchestrator.rs  sandbox.rs  state.rs  test_support.rs
src/agent/: config_gen.rs  flick.rs  mod.rs  models.rs  nu_session.rs  prompts.rs  reel_adapter.rs  tools.rs  wire.rs  zeroclaw.rs
src/config/: mod.rs  project.rs
src/services/: document_store.rs  mod.rs  research.rs  verification.rs
src/task/: assess.rs  branch.rs  leaf.rs  mod.rs  verify.rs
src/tui/: metrics.rs  mod.rs  task_tree.rs  worklog.rs
