[package]
name = "epic"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "signal", "io-util"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
globset = "0.4"
walkdir = "2"
regex = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Commonly disabled pedantic lints (too noisy / too opinionated)
missing_errors_doc = "allow"
missing_panics_doc = "allow"

module_name_repetitions = "allow"
must_use_candidate = "allow"

[dev-dependencies]
tempfile = "3"
